--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>MandyIGuess' Website</title>
+		<link rel="stylesheet" href="../css/main.css">
 	</head>
 	<body>
 		<center>
