--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<style>
+      @font-face { font-family: nsmbu-font; src: url('nsmbu-font.ttf'); } 
+      h1 {
+         font-family: nsmbu-font
+      }
 		<title>MandyIGuess' Website</title>
 		<link rel="stylesheet" href="../css/main.css">
 	</head>
