--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       h1 {
          font-family: nsmbu-font
       }
+		</style>
 		<title>MandyIGuess' Website</title>
 		<link rel="stylesheet" href="../css/main.css">
 	</head>
