lmao it's <br> not [br]

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		<center>
-			<h1>MandyIGuess's Website</h1>[br]<p>(that apostrophe is correct, so don't say it isn't)</p>
+			<h1>MandyIGuess's Website</h1><br><p>(that apostrophe is correct, so don't say it isn't)</p>
 		</center>
 		<h1>early testing ig</h1>
 		<p>who knows if this works tbh, it's just a test :p</p>
