--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 		<center>
 			<h1>MandyIGuess's Website</h1><br><p>(that apostrophe is correct, so don't say it isn't)</p>
 		</center>
-		<h1>early testing ig</h1>
-		<p>who knows if this works tbh, it's just a test :p</p>
+		<h1>My Projects</h1>
+		<p>Here is a list of all my projects I'm working on at this time!</p>
 	
