--- a/Spooky/index.html
+++ b/Spooky/index.html
@@ -8,7 +8,7 @@
       }
 		</style>
 		<title>Spooky Adventure</title>
-		<link rel="stylesheet" href="../css/main.css">
+		<link rel="stylesheet" href="../css/spooky.css">
 	</head>
 	<body>
 		<center>
