--- a/spooky/index.html
+++ b/spooky/index.html
@@ -3,8 +3,15 @@
 	<head>
 		<style>
       @font-face { font-family: nsmbu-font; src: url('nsmbu-font.ttf'); } 
-      h1 {
+      @font-face { font-family: seurat-pro; src: url('seurat-pro.otf'); } 
+      	h1 {
          font-family: nsmbu-font
+      }
+	h2 {
+         font-family: seurat-pro
+      }
+	p {
+         font-family: seurat-pro
       }
 		</style>
 		<title>Spooky Adventure</title>
