--- a/spooky/index.html
+++ b/spooky/index.html
@@ -18,11 +18,15 @@
 		<link rel="stylesheet" href="../css/spooky.css">
 	</head>
 	<body>
-		<center>
-			<h1>Super Mario Spooky Adventure</h1>
-      <h2>A one-world NSMBW hack.</h2>
-      <br>
-      <br>
-      <h1>About Spooky Adventure</h1>
-		  <p>'Super Mario Spooky Adventure', simply Spooky Adventure, is a one-world hack of New Super Mario Bros. Wii, based on the Newer framework. It revolves around a spooky setting, taking place on an island overrun with ghosts, undead, and much more!</p>
-	
+		<div class="diamonds">
+			<center>
+				<h1>Super Mario Spooky Adventure</h1>
+	      			<h2>A one-world NSMBW hack.</h2>
+	      			<br>
+	      			<br>
+	      			<h1>About Spooky Adventure</h1>
+			  	<p>'Super Mario Spooky Adventure', simply Spooky Adventure, is a one-world hack of New Super Mario Bros. Wii, based on the Newer framework. It revolves around a spooky setting, taking place on an island overrun with ghosts, undead, and much more!</p>
+			</center>
+		</div>
+	</body>
+</html>
