--- a/spooky/index.html
+++ b/spooky/index.html
@@ -25,7 +25,7 @@
 	      			<br>
 	      			<br>
 	      			<h1>About Spooky Adventure</h1>
-			  	<p>'Super Mario Spooky Adventure', simply Spooky Adventure, is a one-world hack of New Super Mario Bros. Wii, based on the Newer framework. It revolves around a spooky setting, taking place on an island overrun with ghosts, undead, and much more!</p>
+			  	<p>'Super Mario Spooky Adventure', simply Spooky Adventure, is a one-world hack of New Super Mario Bros. Wii, based on the Newer framework. <br> It revolves around a spooky setting, taking place on an island overrun with ghosts, undead, and much more!</p>
 			</center>
 		</div>
 	</body>
