--- a/spooky/index.html
+++ b/spooky/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
-	<div class="diamonds">
 	<head>
 		<style>
+			#grad {
+  background-image: linear-gradient(#4200a6, #130030);
+}
       @font-face { font-family: nsmbu-font; src: url('nsmbu-font.ttf'); } 
       @font-face { font-family: seurat-pro; src: url('seurat-pro.otf'); } 
       	h1 {
