--- a/spooky/index.html
+++ b/spooky/index.html
@@ -28,6 +28,11 @@
 	      			<br>
 	      			<h1>About Spooky Adventure</h1>
 			  	<p>'Super Mario Spooky Adventure', simply Spooky Adventure, is a one-world hack of New Super Mario Bros. Wii, based on the Newer framework. <br> It revolves around a spooky setting, taking place on an island overrun with ghosts, undead, and much more!</p>
+				<br>
+				<br>
+				<h1>Join our Discord Server</h1>
+				<p>We have a Discord Server where you can follow development! Join it here:</p>
+				<iframe src="https://ptb.discord.com/widget?id=986522459287224340&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 			</center>
 	</body>
 	</div>
