--- a/index.html
+++ b/index.html
@@ -12,8 +12,16 @@
 	</head>
 	<body>
 		<center>
-			<h1>MandyIGuess's Website</h1><br><p>(that apostrophe is correct, so don't say it isn't)</p>
-		</center>
-		<h1>My Projects</h1>
-		<p>Here is a list of all my projects I'm working on at this time!</p>
-	
+			<h1>MandyIGuess' Website</h1>
+			<p>(that grammar is correct, so don't say it isn't)</p>
+			<br>
+			<br>
+			<h1>My Projects</h1>
+			<p>Here is a list of all my projects I'm working on at this time!</p>
+			<h2>Super Mario Spooky Adventure</h2>
+			<p>A one-world NSMBW hack.</p>
+			<a href="../spooky/index.html">
+<img src="../spooky/img/logo.png" alt="Spooky Adventure Logo" style="width:1200px;height:300px;">
+</a>
+			<p>Click here to find out more about Spooky Adventure</p>
+		
