--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<h2>Super Mario Spooky Adventure</h2>
 			<p>A one-world NSMBW hack.</p>
 			<a href="../spooky/index.html">
-<img src="../spooky/img/LogoWithDiamondsAndBG.png" alt="Spooky Adventure Logo" style="width:1200px;height:300px;">
+<img src="../spooky/img/SpookyAdvLogoFadeToWhite.pngg" alt="Spooky Adventure Logo" style="width:1200px;height:300px;">
 </a>
 			<p>Click here to find out more about Spooky Adventure</p>
 		
