--- a/index.html
+++ b/index.html
@@ -23,5 +23,5 @@
 			<a href="../spooky/index.html">
 <img src="../spooky/img/SpookyAdvLogoFadeToWhite.png" alt="Spooky Adventure Logo" style="width:1200px;height:300px;">
 </a>
-			<p style="color:#ff0000;">>HINT: You can click the image to find out more about Spooky Adventure!!</p>
+			<p style="color:#ff0000;">HINT: You can click the image to find out more about Spooky Adventure!!</p>
 		
