--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html>
 	<head>
 		<style>
-      @font-face { font-family: nsmbu-font; src: url('nsmbu-font.ttf'); } 
-      h1 {
+      	@font-face { font-family: nsmbu-font; src: url('nsmbu-font.ttf'); } 
+	@font-face { font-family: comic; src: url('comic.ttf'); } 
+      	h1 {
          font-family: nsmbu-font
+      }
+	p {
+         font-family: comic
       }
 		</style>
 		<title>MandyIGuess' Website</title>
@@ -24,4 +28,10 @@
 <img src="../spooky/img/SpookyAdvLogoFadeToWhite.png" alt="Spooky Adventure Logo" style="width:1200px;height:300px;">
 </a>
 			<p style="color:#ff0000;">HINT: You can click the image to find out more about Spooky Adventure!!</p>
+			<br>
+			<br>
+			<br>
+			<br>
+			<h1><a href="../junkdrawer/index.html">My Junk Drawer</a></h1>
+			<p>This is my 'junk drawer', a collection of random crap and other miscellaneous things I don't want, and I <em>hope</em> you don't want either. What will mostly be here is my old NSMBW modding assets, like my 'remakes' of classic Mario games, and other levels I will never get to finishing. Feel free to sift through it, and take what you want I guess...</p>
 		
