fix a few things

--- a/junkdrawer/index.html
+++ b/junkdrawer/index.html
@@ -39,12 +39,12 @@
         <p><a href="https://mega.nz/file/r2YkQDpB#dhHPbVrAqS6ihitsJpO_fyi0oGTXoY9DqsCBFS9YE9g">Download</a></p>
       <br>
       <h2>New Super Mario Bros. (DS) remade in New Super Mario Bros. Wii</h2>
-        <p style="color:#444444;">Development Period: April 2021</p.
+	<p style="color:#444444;">Development Period: April 2021</p>
         <p style="color:#444444;">Status: Failed</p>
         <p>A remake of NSMBDS, that never got finished, due to a lack of DS assets in Wii, also I didn't understand much about modding at that time.</p>
         <p><a href="https://mega.nz/file/OyJGzbYS#dAOyMl3Ma9ZlBnOWX2KiCUcPvad2bKZWzFsRBglFtpM">Download</a></p>
        <br>
-      <h2>Super Mario Bros. 3 remade in New Super Mario Bros. Wii
+	<h2>Super Mario Bros. 3 remade in New Super Mario Bros. Wii</h2>
         <p style="color:#444444;">Development Period: June 2021; August - September 2021</p>
         <p style="color:#444444;">Status: Unfinished</p>
         <p>A remake of SMB3, that failed due to lack of interest in the project. A download of what <i>was</i> completed is below.
