Story and other stuffs

--- a/spooky/index.html
+++ b/spooky/index.html
@@ -29,7 +29,13 @@
 	      			<h1>About Spooky Adventure</h1>
 			  	<p>'Super Mario Spooky Adventure', simply Spooky Adventure, is a one-world hack of New Super Mario Bros. Wii, based on the Newer framework. <br> It revolves around a spooky setting, taking place on an island overrun with ghosts, undead, and much more!</p>
 				<br>
+				<h1>How big will the mod be?</h1>
+				<p>Well, the mod is currently going to have 10 normal levels, an 'alternative' level, one tower, two castles, as well as maybe some bonus content???</p>
 				<br>
+				<h1>The Story</h1>
+				<p>"Mario and co. land on a mysterious island shortly after their previous adventure, however it doesn't take long before the princess is missing once more! <br> Journey along through a world of unique environments in many different settings! Jump across trees, disturb the dead, treak through the finest pumpkin patch around, travel on a boat through a poisonous lake, tread cautiously across fragile rocks, climb a cliff while having barrels and spike balls hurled at you from above, and even face off against Bowser, who *must* be behind all of this! Perhaps if you get everything along the way, a much greater reward will be given...</p>
+				<h1>Want to apply as a developer?</h1>
+				<p>To apply as a developer, simply join our Discord Server (link below), and DM 'MandyIGuess#9999' with a description of your NSMBW modding skills, and some work you could show me!</p>
 				<h1>Join our Discord Server</h1>
 				<p>We have a Discord Server where you can follow development! Join it here:</p>
 				<iframe src="https://ptb.discord.com/widget?id=986522459287224340&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
