--- a/spooky/index.html
+++ b/spooky/index.html
@@ -33,7 +33,8 @@
 				<p>Well, the mod is currently going to have 10 normal levels, an 'alternative' level, one tower, two castles, as well as maybe some bonus content???</p>
 				<br>
 				<h1>The Story</h1>
-				<p>"Mario and co. land on a mysterious island shortly after their previous adventure, however it doesn't take long before the princess is missing once more! <br> Journey along through a world of unique environments in many different settings! Jump across trees, disturb the dead, treak through the finest pumpkin patch around, travel on a boat through a poisonous lake, tread cautiously across fragile rocks, climb a cliff while having barrels and spike balls hurled at you from above, and even face off against Bowser, who *must* be behind all of this! Perhaps if you get everything along the way, a much greater reward will be given...</p>
+				<p>"Mario and co. land on a mysterious island shortly after their previous adventure, however it doesn't take long before the princess is missing once more! <br> Journey along through a world of unique environments in many different settings! Jump across trees, disturb the dead, treak through the finest pumpkin patch around, travel on a boat through a poisonous lake, tread cautiously across fragile rocks, climb a cliff while having barrels and spike balls hurled at you from above, and even face off against Bowser, who's be behind all of this!<br>Perhaps if you get everything along the way, a much greater reward will be given..."</p>
+				<br>
 				<h1>Want to apply as a developer?</h1>
 				<p>To apply as a developer, simply join our Discord Server (link below), and DM 'MandyIGuess#9999' with a description of your NSMBW modding skills, and some work you could show me!</p>
 				<h1>Join our Discord Server</h1>
