--- a/404.html
+++ b/404.html
@@ -26,7 +26,7 @@
                 <p>Whoops, couldn't find that. <br> The site you looked for:</p>
                 <script>
                     function getURL() {
-                    alert("The URL of this page is: " + window.location.href);
+                    text("The URL of this page is: " + window.location.href);
                     }
                 </script>
                 <p>could not be found. Try retyping the URL, or ensure it actually exists.</p>
