--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
          font-family: seurat-pro
       }
 		</style>
-		<title>Spooky Adventure</title>
+		<title>Page Not Found</title>
 		<link rel="stylesheet" href="../css/404notfound.css">
 	</head>
 	<body>
