--- a/404.html
+++ b/404.html
@@ -23,11 +23,5 @@
 	<body>
 			<center>
                 <h1>ERROR-- 404 Not Found</h1>
-                <p>Whoops, couldn't find that. <br> The site you looked for:</p>
-                <script>
-                    function getURL() {
-                    text("The URL of this page is: " + window.location.href);
-                    }
-                </script>
-                <p>could not be found. Try retyping the URL, or ensure it actually exists.</p>
+                <p>Whoops, couldn't find that. <br> The site you looked for could not be found. Try retyping the URL, or ensure it actually exists.</p>
      
