--- a/404.html
+++ b/404.html
@@ -2,8 +2,10 @@
 <html>
 	<head>
 		<style>
-			#grad {
-  background-image: linear-gradient(#ff0000, #1c0a00);
+			#grad2 {
+  height: 100px;
+  background-color: white; /* For browsers that do not support gradients */
+  background-image: linear-gradient(90deg, #ff0000, #1c0a00);
 }
       @font-face { font-family: nsmbu-font; src: url('nsmbu-font.ttf'); } 
       @font-face { font-family: seurat-pro; src: url('seurat-pro.otf'); } 
