--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 	<head>
 		<style>
 			#grad2 {
-  height: 100px;
+  height: 1150px;
   background-color: white; /* For browsers that do not support gradients */
   background-image: linear-gradient(90deg, #ff0000, #1c0a00);
 }
@@ -23,7 +23,9 @@
 		<link rel="stylesheet" href="../css/404notfound.css">
 	</head>
 	<body>
+		<div id="grad2" style="text-align:center;"></div><br>
 			<center>
                 <h1>ERROR-- 404 Not Found</h1>
                 <p>Whoops, couldn't find that. <br> The site you looked for could not be found. Try retyping the URL, or ensure it actually exists.</p>
+		        </center>
      
