--- a/404.html
+++ b/404.html
@@ -23,9 +23,10 @@
 		<link rel="stylesheet" href="../css/404notfound.css">
 	</head>
 	<body>
-		<div id="grad2" style="text-align:center;"></div><br>
+		<div id="grad2" style="text-align:center;"><h1>ERROR-- 404 Not Found</h1>
+                <p>Whoops, couldn't find that. <br> The site you looked for could not be found. Try retyping the URL, or ensure it actually exists.</p></div>
 			<center>
-                <h1>ERROR-- 404 Not Found</h1>
-                <p>Whoops, couldn't find that. <br> The site you looked for could not be found. Try retyping the URL, or ensure it actually exists.</p>
-		        </center>
-     
+
+		</center>
+	</body>
+</html>
