--- a/404.html
+++ b/404.html
@@ -2,18 +2,10 @@
 <html>
 	<head>
 		<style>
-			#grad2 {
-  height: 1150px;
-  background-color: white; /* For browsers that do not support gradients */
-  background-image: linear-gradient(90deg, #ff0000, #1c0a00);
-}
       @font-face { font-family: nsmbu-font; src: url('nsmbu-font.ttf'); } 
       @font-face { font-family: seurat-pro; src: url('seurat-pro.otf'); } 
       	h1 {
          font-family: nsmbu-font
-      }
-	h2 {
-         font-family: seurat-pro
       }
 	p {
          font-family: seurat-pro
@@ -23,10 +15,9 @@
 		<link rel="stylesheet" href="../css/404notfound.css">
 	</head>
 	<body>
-		<div id="grad2" style="text-align:center;"><h1>ERROR-- 404 Not Found</h1>
-                <p>Whoops, couldn't find that. <br> The site you looked for could not be found. Try retyping the URL, or ensure it actually exists.</p></div>
-			<center>
-
+		<center>
+			<h1>ERROR-- 404 Not Found</h1>
+        	<p>Whoops, couldn't find that. <br> The site you looked for could not be found. Try retyping the URL, or ensure it actually exists.</p>
 		</center>
 	</body>
 </html>
