--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
 	<body>
 		<center>
 			<h1>ERROR-- 404 Not Found</h1>
-        	<p>Whoops, couldn't find that. <br> The site you looked for could not be found. Try retyping the URL, or ensure it actually exists. <br><br> Click (https://mandyiguess.github.io)[here] to go back to the home page.</p>
+        	<p>Whoops, couldn't find that. <br> The site you looked for could not be found. Try retyping the URL, or ensure it actually exists. <br><br> Click <a href="mandyiguess.github.io">here</a> to go back to the home page.</p>
 		</center>
 	</body>
 </html>
