--- a/spooky/setupspooky/wii.html
+++ b/spooky/setupspooky/wii.html
@@ -1,1 +1,20 @@
-<h1>:uhhuh:</h1>
+<!DOCTYPE html>
+<html>
+	<head>
+		<style>
+      	@font-face { font-family: nsmbu-font; src: url('nsmbu-font.ttf'); } 
+	@font-face { font-family: comic; src: url('CORBET.ttf'); } 
+      	h1 {
+         font-family: nsmbu-font
+      }
+	p {
+         font-family: comic
+      }
+		</style>
+		<title>Spooky Adventure Setup -- Wii</title>
+		<link rel="stylesheet" href="../css/main.css">
+	</head>
+	<body>
+		<center>
+			<h1>Setting Up Spooky Adventure on a Wii Console</h1>
+      <small>Go <a href="mandyiguess.github.io/spooky/spookysetup/setup.html">here</a> for other setup options.</small>
