--- a/spooky/setupspooky/wii.html
+++ b/spooky/setupspooky/wii.html
@@ -7,14 +7,22 @@
       	h1 {
          font-family: nsmbu-font
       }
+	h2 {
+         font-family: nsmbu-font
+      }
 	p {
          font-family: comic
       }
 		</style>
 		<title>Spooky Adventure Setup -- Wii</title>
-		<link rel="stylesheet" href="../css/main.css">
+		<link rel="stylesheet" href="../css/spooky.css">
 	</head>
 	<body>
 		<center>
 			<h1>Setting Up Spooky Adventure on a Wii Console</h1>
-      <small>Go <a href="mandyiguess.github.io/spooky/spookysetup/setup.html">here</a> for other setup options.</small>
+      			<small>Go <a href="mandyiguess.github.io/spooky/spookysetup/setup.html">here</a> for other setup options.</small>
+			<br>
+			<br>
+			<p>Setting up and playing Spooky Adventure on the Wii is quite easy to do. Follow these instructions below to play the mod!</p>
+			<br>
+			<h2>Step One</h2>
