--- a/spooky/index.html
+++ b/spooky/index.html
@@ -19,6 +19,7 @@
 		</style>
 		<title>Spooky Adventure</title>
 		<link rel="stylesheet" href="../css/spooky.css">
+		<link rel="icon" type="image/png" href="favicon.png">
 	</head>
 	<body>
 			<center>
@@ -42,8 +43,8 @@
 				<p>We have a Discord Server where you can follow development! Join it here:</p>
 				<iframe src="https://ptb.discord.com/widget?id=986522459287224340&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 			</center>
+		<div style="font-family:Titillium Web; text-align: center; margin-left: auto; margin-right: auto; margin-top: 100px;">
+		(c) 2022 - MandyIGuess
+		</div>
 	</body>
-	<footer>
-		<center>(c) 2022 - MandyIGuess</center>
-	</footer>
 </html>
