--- a/404.html
+++ b/404.html
@@ -16,8 +16,8 @@
 	</head>
 	<body>
 		<center>
-			<h1>ERROR-- 404 Not Found</h1>
-        	<p>Whoops, couldn't find that. <br> The site you looked for could not be found. Try retyping the URL, or ensure it actually exists. <br><br> Click <a href="mandyiguess.github.io">here</a> to go back to the home page.</p>
+			<h1 style="color:#400000">ERROR-- 404 'Page Not Found'</h1>
+        	<p>Whoops, couldn't find that. <br> The portion of this site that you've looked for could not be found. Try retyping the URL, or ensure it actually exists. <br><br> <a href="index.html">Return Home</a></p>
 		</center>
 	</body>
 </html>
