--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
 	<body>
 		<center>
 			<h1 style="color:#400000">ERROR-- 404 'Page Not Found'</h1>
-        	<p>Whoops, couldn't find that. <br> The portion of this site that you've looked for could not be found. Try retyping the URL, or ensure it actually exists. <br><br> <a href="index.html">Return Home</a></p>
+        	<p>Whoops, couldn't find that. <br> The portion of this site that you've looked for could not be found. Try retyping the URL, or ensure it actually exists. <br><br> <a href="index.html">Return Home</a> <br><br> <a href="google.com">Return to the Start</a></p>
 		</center>
 	</body>
 </html>
