--- a/404.html
+++ b/404.html
@@ -3,12 +3,12 @@
 	<head>
 		<style>
       @font-face { font-family: nsmbu-font; src: url('nsmbu-font.ttf'); } 
-      @font-face { font-family: seurat-pro; src: url('seurat-pro.otf'); } 
+      @font-face { font-family: terminal; src: url('dosapp.fon'); } 
       	h1 {
          font-family: nsmbu-font
       }
 	p {
-         font-family: seurat-pro
+         font-family: terminal
       }
 		</style>
 		<title>Page Not Found</title>
@@ -16,8 +16,8 @@
 	</head>
 	<body>
 		<center>
-			<h1 style="color:#400000">ERROR-- 404 'Page Not Found'</h1>
-        	<p>Whoops, couldn't find that. <br> The portion of this site that you've looked for could not be found. Try retyping the URL, or ensure it actually exists. <br><br> <a href="mandyiguess.github.io">Return Home</a> <br> <a href="https://www.google.com">Return to the Start</a></p>
+			<h1 style="color:#550000">ERROR-- 404 'Page Not Found'</h1>
+        	<p>Sorry, couldn't find that. <br> The portion of this site that you've looked for could not be found. Try retyping the URL, or ensure it actually exists. <br><br> <a href="mandyiguess.github.io">Return Home</a> <br> <a href="https://www.google.com">Return to the Start</a></p>
 		</center>
 	</body>
 </html>
