--- a/404.html
+++ b/404.html
@@ -2,10 +2,9 @@
 <html>
 	<head>
 		<style>
-      @font-face { font-family: nsmbu-font; src: url('nsmbu-font.ttf'); } 
       @font-face { font-family: terminal; src: url('dosapp.fon'); } 
       	h1 {
-         font-family: nsmbu-font
+         font-family: terminal
       }
 	p {
          font-family: terminal
