--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<style>
-      @font-face { font-family: terminal; src: url('dosapp.fon'); } 
+      @font-face { font-family: terminal; src: url('dosapp.ttf'); } 
       	h1 {
          font-family: terminal
       }
