soo... maybe i should add copyright info just in case
inb4 cease & desist from Nintendo

--- a/spooky/index.html
+++ b/spooky/index.html
@@ -19,7 +19,7 @@
 		</style>
 		<title>Spooky Adventure</title>
 		<link rel="stylesheet" href="../css/spooky.css">
-		<link rel="icon" type="image/png" href="favicon.png">
+		<link rel="icon" type="image/png" href="../font/favicon.png">
 	</head>
 	<body>
 			<center>
@@ -43,8 +43,10 @@
 				<p>We have a Discord Server where you can follow development! Join it here:</p>
 				<iframe src="https://ptb.discord.com/widget?id=986522459287224340&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 			</center>
-		<div style="font-family:Titillium Web; text-align: center; margin-left: auto; margin-right: auto; margin-top: 100px;">
-		(c) 2022 - MandyIGuess
+		<br>
+		<br>
+		<div style="font-family:nsmbu-font; text-align: center; margin-left: auto; margin-right: auto; margin-top: 100px;">
+		(c) 2022 - MandyIGuess <br> NEW Super Mario Bros. Wii, as well as characters such as Mario, Luigi, Toad, and any others, are <em>fully</em> owned by NINTENDO. I do not have any ownership (full or partial), of said characters. <br> <b>Newer Super Mario Bros. Wii>/b> is a project of the Newer Team. I am not part of the Newer Team, nor did I have any involvement with NewerSMBW in any form. <br> Spooky Adventure is <em>my</em> project, I am the leading developer for it. For concerns regarding it, contact me.
 		</div>
 	</body>
 </html>
