--- a/spooky/index.html
+++ b/spooky/index.html
@@ -46,7 +46,7 @@
 		<br>
 		<br>
 		<div style="font-family:nsmbu-font; text-align: center; margin-left: auto; margin-right: auto; margin-top: 100px;">
-		(c) 2022 - MandyIGuess <br> NEW Super Mario Bros. Wii, as well as characters such as Mario, Luigi, Toad, and any others, are <em>fully</em> owned by NINTENDO. I do not have any ownership (full or partial), of said characters. <br> <b>Newer Super Mario Bros. Wii>/b> is a project of the Newer Team. I am not part of the Newer Team, nor did I have any involvement with NewerSMBW in any form. <br> Spooky Adventure is <em>my</em> project, I am the leading developer for it. For concerns regarding it, contact me.
+			(c) 2022 - MandyIGuess <br> <b>NEW Super Mario Bros. Wii</b>, as well as characters such as Mario, Luigi, Toad, and any others, are <em>fully</em> owned by NINTENDO. I do not have any ownership (full or partial), of said characters. <br> <b>Newer Super Mario Bros. Wii</b> is a project of the Newer Team. I am not part of the Newer Team, nor did I have any involvement with NewerSMBW in any form. <br> Spooky Adventure is <em>my</em> project, I am the leading developer for it. For concerns regarding it, contact me.
 		</div>
 	</body>
 </html>
