--- a/spooky/index.html
+++ b/spooky/index.html
@@ -27,14 +27,11 @@
 	      			<h2>A one-world NSMBW hack.</h2>
 	      			<br>
 	      			<br>
-	      			<h1>About Spooky Adventure</h1>
-			  	<p>'Super Mario Spooky Adventure', simply Spooky Adventure, is a one-world hack of New Super Mario Bros. Wii, based on the Newer framework. <br> It revolves around a spooky setting, taking place on an island overrun with ghosts, undead, and much more!</p>
+	      			<h1>What is Spooky Adventure?</h1>
+			  	<p>'Super Mario Spooky Adventure', simply Spooky Adventure, is a one-world hack of New Super Mario Bros. Wii, based on the Newer framework. <br> It revolves around a spooky setting, taking place on an island overrun with ghosts, undead, and much more! <br> If you want to find out more, go <a href="about.html">here</a>!</p>
 				<br>
 				<h1>How big will the mod be?</h1>
 				<p>Well, the mod is currently going to have 10 normal levels, an 'alternative' level, one tower, two castles, as well as maybe some bonus content???</p>
-				<br>
-				<h1>The Story</h1>
-				<p>"Mario and co. land on a mysterious island shortly after their previous adventure, however it doesn't take long before the princess is missing once more!" <br> Journey along through a world of unique environments in many different settings! Jump across trees, disturb the dead, treak through the finest pumpkin patch around, travel on a boat through a poisonous lake, tread cautiously across fragile rocks, climb a cliff while having barrels and spike balls hurled at you from above, and even face off against Bowser, who's behind all of this!<br>Perhaps if you get <em>everything</em> along the way, a much greater reward will be given...</p>
 				<br>
 				<h1>Want to apply as a developer?</h1>
 				<p>To apply as a developer, simply join our Discord Server (link below), and DM 'MandyIGuess#9999' with a description of your NSMBW modding skills, and some work you could show me!</p>
