--- a/spooky/index.html
+++ b/spooky/index.html
@@ -28,7 +28,7 @@
 	      			<br>
 	      			<br>
 	      			<h1>What is Spooky Adventure?</h1>
-			  	<p>'Super Mario Spooky Adventure', simply Spooky Adventure, is a one-world hack of New Super Mario Bros. Wii, based on the Newer framework. <br> It revolves around a spooky setting, taking place on an island overrun with ghosts, undead, and much more! <br> If you want to find out more, go <a href="about.html">here</a>!</p>
+			  	<p>'Super Mario Spooky Adventure', simply Spooky Adventure, is a one-world hack of New Super Mario Bros. Wii, based on the Newer framework. <br> It revolves around a spooky setting, taking place on an island overrun with ghosts, undead, and much more! <br> <a href="about">Learn more about Spooky Adventure</a></p>
 				<br>
 				<h1>How big will the mod be?</h1>
 				<p>Well, the mod is currently going to have 10 normal levels, an 'alternative' level, one tower, two castles, as well as maybe some bonus content???</p>
