--- a/404.html
+++ b/404.html
@@ -4,10 +4,12 @@
 		<style>
       @font-face { font-family: terminal; src: url('dosapp.ttf'); } 
       	h1 {
-         font-family: terminal
+         	font-family: terminal
+		font-size: 22px;
       }
 	p {
-         font-family: terminal
+        	font-family: terminal
+		font-size: 18px;
       }
 		</style>
 		<title>Page Not Found</title>
