--- a/spooky/index.html
+++ b/spooky/index.html
@@ -38,7 +38,7 @@
 				<br>
 				<h1>Join our Discord Server</h1>
 				<p>We have a Discord Server where you can follow development! Join it here:</p>
-				<iframe src="https://ptb.discord.com/widget?id=986522459287224340&theme=dark" width="600" height="750" allowtransparency="true" frameborder="5" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+				<iframe src="https://discord.com/widget?id=986522459287224340&theme=dark" width="600" height="750" allowtransparency="true" frameborder="5" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 			</center>
 		<br>
 		<br>
