--- a/spooky/about.html
+++ b/spooky/about.html
@@ -19,7 +19,7 @@
 		</style>
 		<title>About Spooky Adventure</title>
 		<link rel="stylesheet" href="../css/spooky.css">
-		<link rel="icon" type="image/png" href="../font/favicon.png">
+		<link rel="icon" type="image/png" href="../spooky/favicon.png">
 	</head>
 	<body>
 			<center>
