--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<p>Here is a list of all my projects I'm working on at this time!</p>
 			<h2>Super Mario Spooky Adventure</h2>
 			<p>A one-world NSMBW hack.</p>
-			<a href="../spooky/index.html">
+			<a href="../spooky">
 <img src="../spooky/img/SpookyAdvLogoFadeToWhite.png" alt="Spooky Adventure Logo" style="width:1200px;height:300px;">
 </a>
 			<p style="color:#ff0000;">HINT: You can click the image to find out more about Spooky Adventure!!</p>
