--- a/spooky/setupspooky/wii.html
+++ b/spooky/setupspooky/wii.html
@@ -2,6 +2,9 @@
 <html>
 	<head>
 		<style>
+			#grad {
+  background-image: linear-gradient(#4200a6, #130030);
+}
       	@font-face { font-family: nsmbu-font; src: url('nsmbu-font.ttf'); } 
 	@font-face { font-family: comic; src: url('CORBET.ttf'); } 
       	h1 {
