--- a/spooky/setupspooky/wii.html
+++ b/spooky/setupspooky/wii.html
@@ -29,3 +29,6 @@
 			<p>Setting up and playing Spooky Adventure on the Wii is quite easy to do. Follow these instructions below to play the mod!</p>
 			<br>
 			<h2>Step One</h2>
+		</center>
+	</body>
+</html>
