--- a/index.html
+++ b/index.html
@@ -20,14 +20,22 @@
 			<p>(that grammar is correct, so don't say it isn't)</p>
 			<br>
 			<br>
+			<h1>About Me</h1>
+			<p>Hi, I'm MandyIGuess! You can call me Mandy for short though.<br>I'm a 14yrs old <em>male</em> living in the USA! My gender pronouns are He/Him/His.<br>My timezone is UTC-4 (better known as "the time that NYC uses"), and I'm usually active from 3PM to 12AM on week days, and from 8AM to 2AM on weekends!<br>If you want to find out more about me, go <a href="aboutme">here</a>!</p>
+			<br>
+			<br>
 			<h1>My Projects</h1>
-			<p>Here is a list of all my projects I'm working on at this time!</p>
+			<p>Here is a list of the projects I'm working on at this time!</p>
 			<h2>Super Mario Spooky Adventure</h2>
 			<p>A one-world NSMBW hack.</p>
 			<a href="../spooky">
 <img src="../spooky/img/SpookyAdvLogoFadeToWhite.png" alt="Spooky Adventure Logo" style="width:1200px;height:300px;">
 </a>
+			<small><p>Logo image still WIP</p></small>
 			<p style="color:#ff0000;">HINT: You can click the image to find out more about Spooky Adventure!!</p>
+			<h2>This website</h2>
+			<p>I think it counts as a project, so it's here.</p>
+			<a href="=https://github.com/MandyIGuess/MandyIGuess.github.io"><b>GitHub Repository</b></a>
 			<br>
 			<br>
 			<br>
