--- a/404.html
+++ b/404.html
@@ -1,24 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<style>
-      @font-face { font-family: terminal; src: url('dosapp.ttf'); } 
-      	h1 {
-         	font-family: terminal;
-		font-size: 72px;
-      }
-	p {
-        	font-family: terminal;
-		font-size: 68px;
-      }
-		</style>
-		<title>Page Not Found</title>
+		<title>404 ERROR</title>
 		<link rel="stylesheet" href="../css/404notfound.css">
 	</head>
 	<body>
 		<center>
 			<h1 style="color:#550000">ERROR-- 404 'Page Not Found'</h1>
-        	<p>Sorry, couldn't find that. <br> The portion of this site that you've looked for could not be found. Try retyping the URL, or ensure it actually exists. <br><br> <a href="mandyiguess.github.io">Return Home</a> <br> <a href="https://www.google.com">Return to the Start</a></p>
+			<p>Sorry, couldn't find that. <br> The portion of this site (<em>mandyiguess.github.io</em>) that you've looked for could not be found. Try retyping the URL, or ensure it actually exists. <br><br> <a href="mandyiguess.github.io">Return Home</a> <br> <a href="https://www.google.com">Return to the Start</a></p>
 		</center>
 	</body>
 </html>
