trying out a bg thing

--- a/spooky/index.html
+++ b/spooky/index.html
@@ -16,6 +16,9 @@
 	p {
          font-family: seurat-pro
       }
+		body {
+  background-image: url('diamonds.svg');
+}
 		</style>
 		<title>Spooky Adventure</title>
 		<link rel="stylesheet" href="../css/spooky.css">
