--- a/spooky/index.html
+++ b/spooky/index.html
@@ -17,7 +17,7 @@
          font-family: seurat-pro
       }
 		body {
-  background-image: url('diamonds.svg');
+  background-image: url('4x4-Diamonds.png');
 }
 		</style>
 		<title>Spooky Adventure</title>
