--- a/spooky/index.html
+++ b/spooky/index.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<style>
-			body {
-  background-image: url('../spooky/img/4x4-Diamonds.png');
+body {
+  background-image: url('4x4-Diamonds.png');
 }
       @font-face { font-family: nsmbu-font; src: url('nsmbu-font.ttf'); } 
       @font-face { font-family: seurat-pro; src: url('seurat-pro.otf'); } 
