Update and rename spooky/youtube.html to spooky/externals/youtubemainchannel.html

--- a/spooky/externals/youtubemainchannel.html
+++ b/spooky/externals/youtubemainchannel.html
@@ -1,1 +1,2 @@
+you should have redirected. if not, something (clearly) went wrong.
 <meta http-equiv="Refresh" content="0; url='https://www.youtube.com/channel/UC7la_QJqCi5YIMLQUG2Kzpw'" />
