--- a/spooky/index.html
+++ b/spooky/index.html
@@ -36,9 +36,15 @@ body {
 				<h1>Want to apply as a developer?</h1>
 				<p>To apply as a developer, simply join our Discord Server (link below), and DM 'MandyIGuess#9999' with a description of your NSMBW modding skills, and some work you could show me!</p>
 				<br>
-				<h1>Join our Discord Server</h1>
+				<h1>Follow Development</h1>
+				<h2>In our Discord Server</h2>
 				<p>We have a Discord Server where you can follow development! Join it here:</p>
 				<iframe src="https://discord.com/widget?id=986522459287224340&theme=dark" width="600" height="750" allowtransparency="true" frameborder="5" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+				<br>
+				<h2>For those who don't want Discord</h2>
+				<p>Don't want to use Discord? Don't worry, we got you covered.<br>Here's links to YouTube channels.</p><br>
+				<a href="../spooky/externals/youtubemainchannel.html">Primary Youtube Channel</a>
+				<a href="../spooky/externals/youtubemandyig.html">Director's YouTube Channel (minor developments here)</a>
 			</center>
 		<br>
 		<br>
