--- a/spooky/index.html
+++ b/spooky/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<style>
 body {
-  background-image: url('4x4-Diamonds.png');
+  background-image: url('../spooky/img/4x4-Diamonds.png');
 }
       @font-face { font-family: nsmbu-font; src: url('nsmbu-font.ttf'); } 
       @font-face { font-family: seurat-pro; src: url('seurat-pro.otf'); } 
@@ -39,17 +39,18 @@ body {
 				<h1>Follow Development</h1>
 				<h2>In our Discord Server</h2>
 				<p>We have a Discord Server where you can follow development! Join it here:</p>
-				<iframe src="https://discord.com/widget?id=986522459287224340&theme=dark" width="600" height="750" allowtransparency="true" frameborder="5" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+				<iframe src="https://discord.com/widget?id=986522459287224340&theme=dark" width="300" height="375" allowtransparency="true" frameborder="5" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 				<br>
-				<h2>For those who don't want Discord</h2>
+				<h2>For those who don't want Discord:</h2>
 				<p>Don't want to use Discord? Don't worry, we got you covered.<br>Here's links to YouTube channels.</p><br>
 				<a href="../spooky/externals/youtubemainchannel.html">Primary Youtube Channel</a>
-				<a href="../spooky/externals/youtubemandyig.html">Director's YouTube Channel (minor developments here)</a>
+				<r>
+				<a href="../spooky/externals/youtubemandyig.html">Director's YouTube Channel</a>
 			</center>
 		<br>
 		<br>
 		<div style="font-family:nsmbu-font; text-align: center; margin-left: auto; margin-right: auto; margin-top: 100px;">
-			(c) 2022 - MandyIGuess <br> <b>NEW Super Mario Bros. Wii</b>, as well as characters such as Mario, Luigi, Toad, and any others, are <em>fully</em> owned by NINTENDO. I do not have any ownership (full or partial), of said characters. <br> <b>Newer Super Mario Bros. Wii</b> is a project of the Newer Team. I am not part of the Newer Team, nor did I have any involvement with NewerSMBW in any form. <br> Spooky Adventure is <em>my</em> project, I am the leading developer for it. For concerns regarding it, contact me.
+			(c) 2022 - MandyIGuess & the Spooky Adventure Development Team <br> <b>NEW Super Mario Bros. Wii</b>, as well as characters such as Mario, Luigi, Toad, and any others, are <em>fully</em> owned by NINTENDO. I do not have any ownership (full or partial), of said characters. <br> <b>Newer Super Mario Bros. Wii</b> is a project of the Newer Team. I am not part of the Newer Team, nor did I have any involvement with NewerSMBW in any form. <br> Spooky Adventure is <em>my</em> project, I am the leading developer for it. For concerns regarding it, contact me.
 		</div>
 	</body>
 </html>
