--- a/spooky/index.html
+++ b/spooky/index.html
@@ -39,13 +39,14 @@ body {
 				<h1>Follow Development</h1>
 				<h2>In our Discord Server</h2>
 				<p>We have a Discord Server where you can follow development! Join it here:</p>
-				<iframe src="https://discord.com/widget?id=986522459287224340&theme=dark" width="300" height="375" allowtransparency="true" frameborder="5" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe><br><p>If the above embed doesn't work, click <a href="../spooky/externals/discord.html">here</a>.</p>
+				<iframe src="https://discord.com/widget?id=986522459287224340&theme=dark" width="300" height="375" allowtransparency="true" frameborder="5" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+				<p>If the above embed doesn't work, click <a href="../spooky/externals/discord.html" style="color: red">here</a>.</p>
 				<br>
 				<h2>For those who don't want Discord:</h2>
 				<p>Don't want to use Discord? Don't worry, we got you covered.<br>Here's links to YouTube channels.</p><br>
-				<p><a href="../spooky/externals/youtubemainchannel.html">Primary Youtube Channel</a></p>
+				<p><a href="../spooky/externals/youtubemainchannel.html" style="color: red">Primary Youtube Channel</a></p>
 				<br>
-				<p><a href="../spooky/externals/youtubemandyig.html">Director's YouTube Channel</a></p>
+				<p><a href="../spooky/externals/youtubemandyig.html" style="color: red">Director's YouTube Channel</a></p>
 			</center>
 		<br>
 		<br>
