--- a/spooky/index.html
+++ b/spooky/index.html
@@ -28,7 +28,7 @@ body {
 	      			<br>
 	      			<br>
 	      			<h1>What is Spooky Adventure?</h1>
-			  	<p>'Super Mario Spooky Adventure', simply Spooky Adventure, is a one-world hack of New Super Mario Bros. Wii, based on the Newer framework. <br> It revolves around a spooky setting, taking place on an island overrun with ghosts, undead, and much more! <br> <a href="about">Learn more about Spooky Adventure</a></p>
+			  	<p>'Super Mario Spooky Adventure', simply Spooky Adventure, is a one-world hack of New Super Mario Bros. Wii, based on the Newer framework. <br> It revolves around a spooky setting, taking place on an island overrun with ghosts, undead, and much more! <br> <a href="about" style="color: red">Learn more about Spooky Adventure</a></p>
 				<br>
 				<h1>How big will the mod be?</h1>
 				<p>Well, the mod is currently going to have 10 normal levels, an 'alternative' level, one tower, two castles, as well as maybe some bonus content???</p>
@@ -43,9 +43,8 @@ body {
 				<p>If the above embed doesn't work, click <a href="../spooky/externals/discord.html" style="color: red">here</a>.</p>
 				<br>
 				<h2>For those who don't want Discord:</h2>
-				<p>Don't want to use Discord? Don't worry, we got you covered.<br>Here's links to YouTube channels.</p><br>
+				<p>Don't want to use Discord? Don't worry, we got you covered.<br>Here's links to YouTube channels.</p>
 				<p><a href="../spooky/externals/youtubemainchannel.html" style="color: red">Primary Youtube Channel</a></p>
-				<br>
 				<p><a href="../spooky/externals/youtubemandyig.html" style="color: red">Director's YouTube Channel</a></p>
 			</center>
 		<br>
