--- a/spooky/about.html
+++ b/spooky/about.html
@@ -25,9 +25,9 @@
 			<center>
 				<h1>About Spooky Adventure</h1>
 				<h1>The Story</h1>
-				<p>"Mario and co. land on a mysterious island shortly after their previous adventure, however it doesn't take long before the princess is missing once more!" <br> Journey along through a world of unique environments in many different settings! Jump across trees, disturb the dead, treak through the finest pumpkin patch around, travel on a boat through a poisonous lake, tread cautiously across fragile rocks, climb a cliff while having barrels and spike balls hurled at you from above, and even face off against Bowser, who's behind all of this!<br>Perhaps if you get <em>everything</em> along the way, a much greater reward will be given...</p>
+				<p>"Mario and co. land on a mysterious island shortly after their previous adventure, however it doesn't take long before the princess is missing once more!"<br><br> Journey along through a world of unique environments in many different settings! Jump across trees, disturb the dead, treak through the finest pumpkin patch around, travel on a boat through a poisonous lake, tread cautiously across fragile rocks, climb a cliff while having barrels and spike balls hurled at you from above, and even face off against Bowser, who's behind all of this!<br><br>Perhaps if you get <em>everything</em> along the way, a much greater reward will be given...</p>
 				<br>
-        <h1>Interactive Map (Coming Soon)</h1>
+        <h1>Game Map (Coming Soon)</h1>
         <p>Currently being worked on!!</p>
         <br>
 				<h1>Follow Development</h1>
