--- a/nsmbwii/index.html
+++ b/nsmbwii/index.html
@@ -18,7 +18,7 @@ body {
       }
 		</style>
 		<title>Spooky Adventure</title>
-		<link rel="stylesheet" href="../css/spooky.css">
+		<link rel="stylesheet" href="../nsmbwii/css/nsmbwiiroot.css">
 		<link rel="icon" type="image/png" href="../spooky/favicon.png">
 	</head>
 	<body>
