--- a/nsmbwii/index.html
+++ b/nsmbwii/index.html
@@ -23,29 +23,7 @@ body {
 	</head>
 	<body>
 			<center>
-				<h1>Super Mario Spooky Adventure</h1>
-	      			<h2>A one-world NSMBW hack.</h2>
-	      			<br>
-	      			<br>
-	      			<h1>What is Spooky Adventure?</h1>
-			  	<p>'Super Mario Spooky Adventure', simply Spooky Adventure, is a one-world hack of New Super Mario Bros. Wii, based on the Newer framework. <br> It revolves around a spooky setting, taking place on an island overrun with ghosts, undead, and much more! <br> <a href="about" style="color: red">Learn more about Spooky Adventure</a></p>
-				<br>
-				<h1>How big will the mod be?</h1>
-				<p>Well, the mod is currently going to have 10 normal levels, an 'alternative' level, one tower, two castles, as well as maybe some bonus content???</p>
-				<br>
-				<h1>Want to apply as a developer?</h1>
-				<p>To apply as a developer, simply join our Discord Server (link below), and DM 'MandyIGuess#9999' with a description of your NSMBW modding skills, and some work you could show me!</p>
-				<br>
-				<h1>Follow Development</h1>
-				<h2>In our Discord Server</h2>
-				<p>We have a Discord Server where you can follow development! Join it here:</p>
-				<iframe src="https://discord.com/widget?id=986522459287224340&theme=dark" width="300" height="375" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
-				<p>If the above embed doesn't work, click <a href="../spooky/externals/discord.html" style="color: red">here</a>.</p>
-				<br>
-				<h2>For those who don't want Discord:</h2>
-				<p>Don't want to use Discord? Don't worry, we got you covered.<br>Here's links to YouTube channels.</p>
-				<p><a href="../spooky/externals/youtubemainchannel.html" style="color: red">Primary Youtube Channel</a></p>
-				<p><a href="../spooky/externals/youtubemandyig.html" style="color: red">Director's YouTube Channel</a></p>
+				<h1>What adventure will you go on today?</h1>
 			</center>
 		<br>
 		<br>
