--- a/nsmbwii/index.html
+++ b/nsmbwii/index.html
@@ -19,16 +19,21 @@ body {
 		</style>
 		<title>Spooky Adventure</title>
 		<link rel="stylesheet" href="../css/nsmbwii.css">
-		<link rel="icon" type="image/png" href="../spooky/favicon.png">
+		<link rel="icon" type="image/png" href="../nsmbwii/img/Rainbros.png">
 	</head>
 	<body>
 			<center>
 				<h1>What adventure will you go on today?</h1>
+				<br>
+				<br>
+				<a href="../spooky">
+<img src="../nsmbwii/img/Save File Spooky Adventure.png" alt="Spooky Adventure" style="width:1400px;height:250px;">
+</a>
 			</center>
 		<br>
 		<br>
 		<div style="font-family:seurat-pro; text-align: center; margin-left: auto; margin-right: auto; margin-top: 100px;">
-			(c) 2022 - MandyIGuess & the Spooky Adventure Development Team <br> <b>NEW Super Mario Bros. Wii</b>, as well as characters such as Mario, Luigi, Toad, and any others, are <em>fully</em> owned by NINTENDO. I do not have any ownership (full or partial), of said characters. <br> <b>Newer Super Mario Bros. Wii</b> is a project of the Newer Team. I am not part of the Newer Team, nor did I have any involvement with NewerSMBW in any form. <br> Spooky Adventure is <em>my</em> project, I am the leading developer for it. For concerns regarding it, contact me.
+			(c) 2022 - MandyIGuess<br> <b>NEW Super Mario Bros. Wii</b>, as well as characters such as Mario, Luigi, Toad, and any others, are <em>fully</em> owned by NINTENDO. I do not have any ownership (full or partial), of said characters.
 		</div>
 	</body>
 </html>
