--- a/spooky/index.html
+++ b/spooky/index.html
@@ -18,6 +18,11 @@ body {
       }
 		</style>
 		<title>Spooky Adventure</title>
+		<meta content="Spooky Adventure" property="og:title" />
+		<meta content="Home of Spooky Adventure" property="og:description" />
+		<meta content="https://mandyiguess.github.io/spooky" property="og:url" />
+		<!--<meta content="https://embed.com/embedimage.png" property="og:image" />-->
+		<meta content="#5a1fa6" data-react-helmet="true" name="theme-color" />
 		<link rel="stylesheet" href="../css/spooky.css">
 		<link rel="icon" type="image/png" href="../spooky/favicon.png">
 	</head>
