--- a/spooky/index.html
+++ b/spooky/index.html
@@ -18,8 +18,8 @@ body {
       }
 		</style>
 		<title>Spooky Adventure</title>
-		<meta content="Spooky Adventure" property="og:title" />
-		<meta content="Home of Spooky Adventure" property="og:description" />
+		<meta content="Super Mario Spooky Adventure" property="og:title" />
+		<meta content="Home of Spooky Adventure, a one-world NSMBW hack based on the Newer Framework. Currently in development by MandyIGuess." property="og:description" />
 		<meta content="https://mandyiguess.github.io/spooky" property="og:url" />
 		<!--<meta content="https://embed.com/embedimage.png" property="og:image" />-->
 		<meta content="#5a1fa6" data-react-helmet="true" name="theme-color" />
