--- a/nsmbwii/index.html
+++ b/nsmbwii/index.html
@@ -29,10 +29,18 @@ body {
 				<a href="../spooky">
 <img src="../nsmbwii/img/Save File Spooky Adventure.png" alt="Spooky Adventure" style="width:1400px;height:250px;">
 </a>
+				<br>
+				<a href="../nsmbwii/nodata">
+<img src="../nsmbwii/img/Save File Blank Num2.png" alt="Blank Save File" style="width:1400px;height:250px;">
+</a>
+				<br>
+				<a href="../nsmbwii/nodata">
+<img src="../nsmbwii/img/Save File Blank Num3.png" alt="Blank Save File" style="width:1400px;height:250px;">
+</a>
 			</center>
 		<br>
 		<br>
-		<div style="font-family:seurat-pro; text-align: center; margin-left: auto; margin-right: auto; margin-top: 100px;">
+		<div style="font-family:seurat-pro; text-align: center; margin-left: auto; margin-right: auto; margin-bottom: 0px;">
 			(c) 2022 - MandyIGuess<br> <b>NEW Super Mario Bros. Wii</b>, as well as characters such as Mario, Luigi, Toad, and any others, are <em>fully</em> owned by NINTENDO. I do not have any ownership (full or partial), of said characters.
 		</div>
 	</body>
