--- a/nsmbwii/nodata.html
+++ b/nsmbwii/nodata.html
@@ -11,7 +11,7 @@ body {
       }
 		</style>
 		<title>Spooky Adventure</title>
-		<link rel="stylesheet" href="../css/nsmbwii.css">
+		<link rel="stylesheet" href="../css/nodata.css">
 		<link rel="icon" type="image/png" href="../nsmbwii/img/Texture3.png">
 	</head>
 	<body>
