--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 	p {
          font-family: comic
       }
+	a {
+         font-family: nsmbu-font
+      }
+	h2 {
+         font-family: nsmbu-font
+      }
 		</style>
 		<title>MandyIGuess' Website</title>
 		<link rel="stylesheet" href="../css/main.css">
@@ -25,21 +31,12 @@
 			<br>
 			<br>
 			<h1>My Projects</h1>
-			<p>Here is a list of the projects I'm working on at this time!</p>
-			<h2>Super Mario Spooky Adventure</h2>
-			<p>A one-world NSMBW hack.</p>
-			<a href="../spooky">
-<img src="../spooky/img/SpookyAdvLogoFadeToWhite.png" alt="Spooky Adventure Logo" style="width:1200px;height:300px;">
-</a>
-			<small><p>Logo image still WIP</p></small>
-			<p style="color:#ff0000;">HINT: You can click the image to find out more about Spooky Adventure!!</p>
-			<h2>This website</h2>
-			<p>I think it counts as a project, so it's here.</p>
-			<a href="=https://github.com/MandyIGuess/MandyIGuess.github.io"><b>GitHub Repository</b></a>
+			<h2>Modding</h2>
+			<a href="../nsmbwii">NEW Super Mario Bros. Wii Modding Projects</a>
 			<br>
 			<br>
 			<br>
 			<br>
-			<h1><a href="../junkdrawer/index.html">My Junk Drawer</a></h1>
+			<h1><a href="../junkdrawer">My Junk Drawer</a></h1>
 			<p>This is my 'junk drawer', a collection of random crap and other miscellaneous things I don't want, and I <em>hope</em> you don't want either. What will mostly be here is my old NSMBW modding assets, like my 'remakes' of classic Mario games, and other levels I will never get to finishing. Feel free to sift through it, and take what you want I guess...</p>
 		
